readme done - beskrivelse af projekt